--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 # BlueJ files
 *.ctxt
 
+# JetBrains IDEA files
+.idea/
+*.iml
+
+# Maven files
+target/
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
