--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.davidcarboni</groupId>
+            <artifactId>resource-utils</artifactId>
+            <version>1.1.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
