--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.nikolaybespalov</groupId>
-    <artifactId>gt-oziexplorermap</artifactId>
+    <artifactId>gt-oziexplorer</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
-    <name>gt-oziexplorermap</name>
-    <url>https://github.com/nikolaybespalov/gt-oziexplorermap</url>
+    <name>gt-oziexplorer</name>
+    <url>https://github.com/nikolaybespalov/gt-oziexplorer</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
