--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>${org.geotools.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.nikolaybespalov</groupId>
+            <artifactId>imageio-ozf</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
@@ -48,6 +54,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
+        </dependency>
+        <dependency> <!-- TODO: only for ImmutableMap -->
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>25.1-jre</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
