--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>com.github.nikolaybespalov</groupId>
             <artifactId>imageio-ozf</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
