--- a/pom.xml
+++ b/pom.xml
@@ -261,8 +261,12 @@
     </build>
 
     <repositories>
-        <!-- GeoTools artifacts are not located in Maven Central -->
         <repository>
+            <id>central</id>
+            <name>Maven Central Repository</name>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+        <repository><!-- GeoTools artifacts are not located in Maven Central -->
             <id>osgeo</id>
             <name>Open Source Geospatial Foundation Repository</name>
             <url>http://download.osgeo.org/webdav/geotools/</url>
