--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.nikolaybespalov</groupId>
@@ -60,9 +61,13 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <org.geotools.version>19.1</org.geotools.version>
+
         <!-- By default, this option is disabled, which means that no "does not allow updating artifact" error can occur -->
         <!-- during the release because the artifact is already loaded -->
         <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo> <!-- Travis-CI turns this option off -->
+
+        <!-- http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#trimStackTrace -->
+        <trimStackTrace>false</trimStackTrace>
     </properties>
 
     <dependencies>
