--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.nikolaybespalov</groupId>
     <artifactId>gt-ozi</artifactId>
-    <version>0.1.15-SNAPSHOT</version>
+    <version>0.1.15</version>
 
     <name>gt-ozi</name>
     <description>GeoTools plugin that allows you to read OziExplorer spatial reference file(.MAP) without using
@@ -32,7 +32,7 @@
     <scm>
         <url>https://github.com/nikolaybespalov/gt-ozi</url>
         <connection>scm:git:https://github.com/nikolaybespalov/gt-ozi.git</connection>
-        <tag>HEAD</tag>
+        <tag>0.1.15</tag>
     </scm>
 
     <issueManagement>
