--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <org.geotools.version>19.1</org.geotools.version>
+        <org.geotools.version>19.4</org.geotools.version>
 
         <!-- By default, this option is disabled, which means that no "does not allow updating artifact" error can occur -->
         <!-- during the release because the artifact is already loaded -->
@@ -88,6 +88,11 @@
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-epsg-hsql</artifactId>
+            <version>${org.geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-extension</artifactId>
             <version>${org.geotools.version}</version>
         </dependency>
         <dependency>
