--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ install: true
 script:
  - gpg --cipher-algo AES256 --passphrase $GPG_PASSPHRASE -o .travis-ci/sec.asc -d .travis-ci/sec.asc.gpg &&
    gpg --import .travis-ci/sec.asc && cp .travis-ci/settings.xml $HOME/.m2/settings.xml &&
-   mvn -DskipNexusStagingDeployMojo=false -Dsurefire.useFile=false deploy &&
-   mvn com.gavinmogan:codacy-maven-plugin:coverage -DcoverageReportFile=target/coverage-reports/jacoco/jacoco.xml
+   mvn -DskipNexusStagingDeployMojo=false -Dsurefire.useFile=false deploy -Pupload-coverage-report
