--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
   - |
     gpg --cipher-algo AES256 --passphrase $GPG_PASSPHRASE -o .travis-ci/sec.asc -d .travis-ci/sec.asc.gpg
     gpg --import .travis-ci/sec.asc && cp .travis-ci/settings.xml $HOME/.m2/settings.xml
-    mvn -DskipNexusStagingDeployMojo=false -Dsurefire.useFile=false deploy -Pupload-coverage-report
+    mvn -Dsurefire.useFile=false deploy -Psign-artifacts -Pdeploy-artifacts -Pupload-coverage-report
